# planforge

./: .envrc  .gitignore  Ambitious_PRD_v1.md  CLAUDE.md  LICENSE  Lean_MVP_PRD_v1.md  README.md  dev-migrate.sh  dev-start.sh  dev-stop.sh  docker-compose.yml  wireframes.md
.claude/: launch.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: auto_migrate.py  db.py  main.py
backend/app/api/routes/: export.py  gallery.py  generate.py  health.py  payments.py  projects.py  revisions.py  rooms.py  share.py  teams.py
backend/app/config/: city_rules.json  compliance_rules.json  material_rates.json  room_specs.json  settings.py
backend/app/config/cities/: bangalore_bbmp.json  chennai_cmda.json  hyderabad_ghmc.json  mumbai_mcgm.json  nbc_generic.json  pune_pmc.json
backend/app/engine/: approval_pdf.py  archetypes.py  boq.py  cad_advanced.py  cad_elements.py  cad_primitives.py  compliance.py  generator.py  models.py  pdf.py  scorer.py  solver.py  vastu.py
backend/app/models/: project.py  revision.py  team.py  user.py
backend/app/schemas/: layout.py  project.py  revision.py
backend/tests/: conftest.py  test_api_e2e.py  test_boq_city_rates.py  test_cad_advanced.py  test_cad_primitives.py  test_compliance_check_endpoint.py  test_dxf_dimstyle.py  test_dxf_doc_setup.py  test_dxf_wall_hatch.py  test_engine.py  test_health.py  test_l_shaped.py  test_l_shaped_compliance_area.py  test_l_shaped_plots.py  test_multi_floor.py  test_quad_plots.py  test_revision_history.py  test_scorer.py  test_share_token.py  test_solver.py
docs/: cad_primitives_plan.md  (+3 more)
(+118 files in other folders)
